think i fixed the question mark spacing problem

--- a/app/styles/_slides.scss
+++ b/app/styles/_slides.scss
@@ -87,6 +87,9 @@
 
   .background-art {
     position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
     width: 70%;
 
     @include breakpoint(phablet) {
